[P4ADEV-3518] technical Mixed DP creation